# Bio-Bridge-Pro-HR

./: .env  .env.example  .gitignore  ADD_DEVICE_STATUS_COLUMN.sql  ADD_IS_ACTIVE_COLUMN.sql  ADD_MAX_USERS_COLUMN.sql  ADMIN_SETUP_COMPLETE.sql  ATTENDANCE_DEVICE_SYNC_GUIDE.md  ATTENDANCE_SYSTEM_RESTORED.md  COMPLETE_ERP_SYSTEM.md  COMPLETE_PACKAGE_SUMMARY.md  COMPLETE_SUPABASE_SCHEMA.sql  COMPLETE_SYSTEM_GUIDE.md  CREATE_ALL_TABLES.sql  CREATE_PAYMENTS_TICKETS_TABLES.sql  CREATE_PROVIDER_STAFF_TABLES.sql  CREATE_PROVIDER_USER.sql  DEMO_DATA_TESTING_GUIDE.md  DEVICE_MANAGEMENT_IMPROVEMENTS.md  DEVICE_MANAGEMENT_IN_SETTINGS.md  DEVICE_UI_COMPLETE.md  ERP_DASHBOARD_GUIDE.md  ERP_MODULE_LIST.md  EXTEND_EMPLOYEE_SCHEMA.sql  FINAL_LOGIN_READY.md  FIXED_LOGIN_GUIDE.md  FIX_PROVIDER_RLS.sql  FIX_SUPABASE_MISMATCHES.sql  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INSERT_SAMPLE_EMPLOYEES.sql  LOGIN_SETUP_GUIDE.md  MASTER_SCHEMA.sql  MIGRATE_EMPLOYEES_TABLE.sql  QUICK_START.md  README.md  RUN_THIS_NOW.sql  SCHEMA_MAPPING.md  SEED_DATABASE_COMPLETE.sql  (+36 more)
src-tauri/: Cargo.toml  build_errors.txt  build_errors_2.txt  build_errors_3.txt  build_errors_utf8.txt  build_errors_utf8_2.txt  build_errors_utf8_3.txt  check_output.txt  tauri.conf.json
src-tauri/scripts/: test.json  zk_fetch.cjs
src-tauri/src/: commands.rs  crud.rs  db.rs  errors.rs  lib.rs  lib.rs.view  main.rs  models.rs  security.rs  sync_service.rs
src-tauri/src-tauri/scripts/: zk_fetch.cjs
src-tauri/src/cloud/: gdrive.rs
src-tauri/src/hardware/: dat_parser.rs  hikvision.rs  id.rs  (+4 more)
(+137 files in other folders)
