[package]
name = "tauri-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31.0", features = ["bundled"] }
tokio = { version = "1.37.0", features = ["full"] }
reqwest = { version = "0.12.4", features = ["json", "rustls-tls", "multipart"] }
chrono = { version = "0.4.38", features = ["serde"] }
jsonwebtoken = "9"
base64 = "0.22"
thiserror = "1.0"
async-trait = "0.1"
rand = "0.8"
aes-gcm = "0.10"
aead = "0.5"
hex = "0.4"
sha2 = "0.10"
bcrypt = "0.15"
tiny_http = "0.12"

[profile.dev]
split-debuginfo = "unpacked"
debug = 0
