[package]
name = "biobridge-pro-hr"
version = "0.1.0"
edition = "2021"

[lib]
name = "biobridge_pro_hr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-updater = "2.0" 
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] } # For real-time ZKTeco sockets
# Add other dependencies you previously listed (rusqlite, reqwest, etc.) here

